--- a/style.css
+++ b/style.css
@@ -315,63 +315,49 @@ section {
   padding-bottom: 20px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 851px) {
   /* body {
     display: none;
   } */
 
-  .container {
-    width: 100%;
+  .jstcontainer {
+    margin-bottom: 20px;
   }
 
-  .first {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 20px;
-  }
-
-  .firstcont2 {
-    display: flex;
-
-    align-items: center;
-    justify-content: space-around;
-    gap: 20px;
-    padding-right: 10px;
-    height: 10vh;
-    /* background-color: red; */
-  }
-
-  .icons {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  .icons,
+  .search,
+  input {
+    display: none;
   }
 
   .second-nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     height: 90vh;
-    width: 100vh;
-
     margin: auto;
   }
 
   /* /SIDE SECTION/ */
+
+  .image-container {
+    margin-left: 8px;
+  }
+
   .fig5 {
-    width: 490px;
+    width: 320px;
+    height: 400px;
   }
 
   .fig4 {
-    width: 200px;
-    height: 252px;
+    width: 110px;
+    height: 230px;
   }
 
   .fig2 {
-    width: 250px;
-    height: 252px;
+    width: 170px;
+    height: 230px;
   }
 
   .second-container {
@@ -379,7 +365,7 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 0px 30px;
+    padding: 0px 40px;
   }
 
   .sideh1 {
@@ -395,6 +381,6 @@ section {
   }
 
   .figlast {
-    width: 420px;
+    width: 300px;
   }
 }
