--- a/style.css
+++ b/style.css
@@ -337,6 +337,22 @@ section {
     flex-direction: column;
     height: 90vh;
     margin: auto;
+
+    transition: 0.5s;
+    transition: transform 0.5s ease-in;
+
+    animation-name: moveRight;
+    animation-direction: reverse;
+    animation-duration: 0.6s;
+  }
+
+  @keyframes moveRight {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(100px);
+    }
   }
 
   /* /SIDE SECTION/ */
@@ -347,17 +363,17 @@ section {
 
   .fig5 {
     width: 320px;
-    height: 400px;
+    height: 390px;
   }
 
   .fig4 {
     width: 110px;
-    height: 230px;
+    height: 220px;
   }
 
   .fig2 {
     width: 170px;
-    height: 230px;
+    height: 220px;
   }
 
   .second-container {
