--- a/style.css
+++ b/style.css
@@ -369,17 +369,17 @@ section {
 
   .fig5 {
     width: 320px;
-    height: 380px;
+    height: 350px;
   }
 
   .fig4 {
     width: 110px;
-    height: 200px;
+    height: 180px;
   }
 
   .fig2 {
     width: 170px;
-    height: 200px;
+    height: 180px;
   }
 
   .second-container {
@@ -392,6 +392,14 @@ section {
 
   .sideh1 {
     width: 80%;
+  }
+
+  .vari {
+    display: block;
+  }
+  .varh2 {
+    font-size: 28px;
+    margin-bottom: 20px;
   }
 
   .image-container4 {
